tools: dependency update, fix selected wrapped table cell's text color

--- a/tools/observerUiSettingsEditor/project/src/main/resources/view/application.css
+++ b/tools/observerUiSettingsEditor/project/src/main/resources/view/application.css
@@ -102,3 +102,17 @@
     -fx-font-style: italic;
     -fx-padding: 2.0em, 0.0em, 0.0em, 0.0em;
 }
+
+// CUSTOM
+
+// wrapped table cell - default text color
+.table-cell .cellWrapText {
+    -fx-fill: white;
+    -fx-font-smoothing-type: lcd;
+}
+// wrapped table cell - highlighted row text color
+.table-row-cell:focused:filled:selected .cellWrapText {
+    -fx-fill: black;
+    -fx-font-smoothing-type: lcd;
+}
+
